2012-01-10  Hirofumi Kosaka <kosaka@rworks.jp>

        *  util/pandora_manage.pl: Added new optional parameters (str_warning and
	   str_critical) for module at creation time.

2012-01-05  Hirofumi Kosaka <kosaka@rworks.jp>

        * lib/PandoraFMS/Core.pm, util/pandora_manage.pl: Merged from trunk.
          Added a new optoins to CLI: Create group

2011-12-14  Ramon Novoa  <rnovoa@artica.es>

	* util/pandora_db.pl, util/pandora_manage.pl: Updated version strings.

2011-12-13  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  pandora_server.spec,
	  lib/PandoraFMS/Config.pm: Fixed version strings (were wrong
	  in the previous commit).

2011-12-13  Ramon Novoa  <rnovoa@artica.es>

	* DEBIAN/control,
	  DEBIAN/make_deb_package.sh,
	  pandora_server.spec,
	  lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/Core.pm: Updated version strings.

2011-12-12  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Tools.pm
	util/pandora_db.pl: Moved is_policy_module function from
	db script to Enteprise and call it through enterprise hook

2011-12-05 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* pandora_server_upgrade: Removed rm of pandora_exec and 
	pandora_server and changed for ln -s commands.
	
	Fixes: #3451305

2011-12-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/NetworkServer.pm
	 lib/PandoraFMS/WMIServer.pm
	 lib/PandoraFMS/PluginServer.pm
	 lib/PandoraFMS/PredictionServer.pm: Fixed os_version  when an agent 
	 is updated.
	 
	 Fixes: #3314285 

2011-12-01 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm: Added new function db_concat and added 
	compatibility with postgreSQL and Oracle in function 
	pandora_get_module_tags.

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_manage.pl: Added some checks that I forget in my 
	last commit.

2011-11-29 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
